# retirementplanner

./: .gitignore  Makefile  README.md  docker-compose.yml  retirement_app_features.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_conversations.py
backend/app/: main.py
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  checklist.py  conversation.py  financial.py  goal.py  user.py
backend/app/routers/: auth.py  chat.py  checklist.py  countdown.py  financial.py  goals.py  users.py
backend/app/schemas/: chat.py  checklist.py  financial.py  goal.py  user.py
backend/app/services/: coach_context.py  coach_prompt.py
backend/tests/: conftest.py  test_auth.py  test_checklist.py  test_countdown.py
frontend/: jest.config.js  package-lock.json  package.json  tsconfig.jest.json
frontend/src/app/: app-shell.tsx  layout.tsx  page.tsx
frontend/src/app/checklist/: page.tsx
frontend/src/app/coach/: page.tsx
frontend/src/app/countdown/: page.tsx
frontend/src/app/countdown/__tests__/: page.test.tsx
frontend/src/app/finances/: page.tsx
frontend/src/app/goals/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts  auth-context.tsx
